Closed
Bug 355037
Opened 19 years ago
Closed 19 years ago
drag a file with a .URL extension.
Categories
(Camino Graveyard :: Drag & Drop, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: 7leonn, Assigned: moz)
Details
(Keywords: fixed1.8.0.9, fixed1.8.1)
Attachments
(2 files, 3 obsolete files)
|
2.76 KB,
patch
|
stuart.morgan+bugzilla
:
review+
sfraser_bugs
:
superreview+
|
Details | Diff | Splinter Review |
|
2.88 KB,
patch
|
froodian
:
review+
alqahira
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.7) Gecko/20060911 Camino/1.0.3 (MultiLang)
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.7) Gecko/20060911 Camino/1.0.3 (MultiLang)
I drag this link on camino, and it downloads itself (the .URL bookmark) again and again. Camino is unusable ans my downloads folder is overhelmed with this auto-duplicating file. Safari does well with the .URL bookmark.
Reproducible: Always
Steps to Reproduce:
1.drag the .URL to camino
2.Let it bug
3.Force to quit
Expected Results:
open the embedded url of the .URL file
I wish I could upload you a .URL bookmark for you to investigate on this issue.
the .URL file, opened with textedit is (for example):
[InternetShortcut]
URL=http://www.laserpod.com/introduction.asp
and the filename (open with camino by default)is:
laserpod.URL
| Assignee | ||
Comment 2•19 years ago
|
||
Change the extension from .URL to .url and it will work. However, I should probably make the extension check case-insensitive. Taking.
Assignee: nobody → mozilla
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 3•19 years ago
|
||
The fix is to lowercase the file extension before the isEqualToString: calls.
Attachment #240828 -
Flags: review?
| Assignee | ||
Comment 4•19 years ago
|
||
Severity -> normal.
I don't see any auto-duplication, and the fix is trivial, so...
Severity: critical → normal
| Assignee | ||
Comment 5•19 years ago
|
||
Oops, I missed the one in MainController.mm.
Attachment #240828 -
Attachment is obsolete: true
Attachment #240834 -
Flags: review?(stridey)
Attachment #240828 -
Flags: review?
Updated•19 years ago
|
Attachment #240834 -
Flags: superreview?(sfraser_bugs)
Attachment #240834 -
Flags: review?(stridey)
Attachment #240834 -
Flags: review+
| Assignee | ||
Comment 6•19 years ago
|
||
r+ as per froodian on IRC.
Attachment #240834 -
Attachment is obsolete: true
Attachment #240835 -
Flags: review+
Attachment #240834 -
Flags: superreview?(sfraser_bugs)
| Assignee | ||
Comment 7•19 years ago
|
||
Fixing up the BM manager too, so we don't have to worry about it later (per smorgan).
Attachment #240835 -
Attachment is obsolete: true
Comment 8•19 years ago
|
||
Comment on attachment 240841 [details] [diff] [review]
v3: Add BookmarkManager.mm, too.
r=me
Attachment #240841 -
Flags: superreview?(sfraser_bugs)
Attachment #240841 -
Flags: review+
Updated•19 years ago
|
Attachment #240841 -
Flags: superreview?(sfraser_bugs) → superreview+
This looks simple enough to consider for 1.0.4 when the time comes.
Flags: camino1.0.4?
Whiteboard: [needs checkin]
Comment 10•19 years ago
|
||
Checked in on trunk and 1.8branch
Status: NEW → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Whiteboard: [needs checkin]
This patch fails to apply on the 1.8.0 branch.
If someone whips up a 180branch-compatible patch, we'll consider this for 1.0.4.
| Assignee | ||
Comment 12•19 years ago
|
||
I'll have to check out that branch, but I should be able to do it.
| Assignee | ||
Comment 13•19 years ago
|
||
| Assignee | ||
Updated•19 years ago
|
Attachment #248433 -
Flags: review?(stridey)
Comment on attachment 248433 [details] [diff] [review]
Patch for 1.8.0 branch
I tested this, and it works as expected (within the confines of bug 363654 on the 1.8.0 branch and bug 363633 everywhere).
Attachment #248433 -
Flags: review+
Flags: camino1.0.4? → camino1.0.4+
Comment 15•19 years ago
|
||
Comment on attachment 248433 [details] [diff] [review]
Patch for 1.8.0 branch
r=me. Since the differences are redonkulous, foregoing a second sr. If anybody disagrees, they should speak up before I get to checkins.
Attachment #248433 -
Flags: review?(stridey) → review+
Updated•19 years ago
|
Whiteboard: [Needs Checkin 1.8.0branch]
Comment 16•19 years ago
|
||
Checked in on 1.8.0branch (forgot bug number in checkin comment, search for "robustification")
Keywords: fixed1.8.0.9
Whiteboard: [Needs Checkin 1.8.0branch]
You need to log in
before you can comment on or make changes to this bug.
Description
•