Camino only: Bug 355037 - Better handling of files with upper case extensions.  Patch by Wevah <mozilla@derailer.org> r=smorgan sr=smfr