camino/src/extensions/NSPasteboard+Utils.mm
@@ -153,7 +153,7 @@ NSString* const kWebURLsWithTitlesPboardType  = @"WebURLsWithTitlesPboardType"; 
     *outTitles = [NSMutableArray arrayWithCapacity:[files count]];
     for ( unsigned int i = 0; i < [files count]; ++i ) {
       NSString *file = [files objectAtIndex:i];
-      NSString *ext = [file pathExtension];
+      NSString *ext = [[file pathExtension] lowercaseString];
       NSString *urlString = nil;
       NSString *title = @"";
       OSType fileType = NSHFSTypeCodeFromFileType(NSHFSTypeOfFile(file));
@@ -165,7 +165,7 @@ NSString* const kWebURLsWithTitlesPboardType  = @"WebURLsWithTitlesPboardType"; 
           urlString = [urlFromInetloc absoluteString];
           title     = [[file lastPathComponent] stringByDeletingPathExtension];
         }
-      }  else if ([ext isEqualToString:@"url"] || fileType == 'LINK') {
+      } else if ([ext isEqualToString:@"url"] || fileType == 'LINK') {
         NSURL* urlFromIEURLFile = [NSURL URLFromIEURLFile:file];
         if (urlFromIEURLFile) {
           urlString = [urlFromIEURLFile absoluteString];
